change z-index to fix overlap issues

--- a/css/nav.css
+++ b/css/nav.css
@@ -31,7 +31,7 @@ body{
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1000;
 }
 
 .nav span{
@@ -71,7 +71,7 @@ body{
   box-sizing: border-box;
   padding: 10px 0;
   border-radius: 0 0 0 5px;
-  z-index: 20;
+  z-index: 100000;
 }
 
 .hidden-nav.show{
